# PythonWeb_mod_14

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  middlewares.py  my_test_1.py  pyproject.toml  test.db  test.py
docs/source/: conf.py  index.rst
migrations/versions/: 41ef95bb2b56_add_table_users.py  6b6f28ab44df_initial_migration.py  9fd407f4402a_init.py
postgres-data/: postmaster.pid
postgres-data/base/13468/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16396  16398  16399  16400  16401  16402  16403  16404  16410  16411  16412  16414  16418  16419  16420  16421  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  (+12 more)
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_16384.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13468.stat  db_16384.stat  global.stat
src/: main.py
src/conf/: config.py
src/database/: db.py  init_db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
